kubernetes-manifests/hello.service.yaml
# This Service manifest defines:
# - a load balancer for pods matching label "app: python-hello-world"
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: python-hello-world-external
  annotations:                                # 신규 추가: neg 만들어야 함
    cloud.google.com/neg: '{"ingress": true}' # 신규 추가: neg 만들어야 함
spec:
  # type: LoadBalancer
  type: ClusterIP
  selector:
    app: python-hello-world
  ports:
  - name: http
    port: 80
    targetPort: 8080
