kubernetes-manifests/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilb-demo-ingress
  namespace: default
  annotations:
    # kubernetes.io/ingress.regional-static-ip-name: STATIC_IP_NAME # 추후 ip 고정 시켜야함 
    kubernetes.io/ingress.class: "gce-internal"
spec:
  defaultBackend:
    service:
      name: python-hello-world-external #service name으로 지정 필요
      port:
        number: 80
